--- a/.github/workflows/dokka-examples.yml
+++ b/.github/workflows/dokka-examples.yml
@@ -7,48 +7,58 @@ jobs:
     strategy:
       matrix:
         projects: [
-            ./gradle/dokka/dokka-gradle-example,
-            ./gradle/dokka-kotlinAsJava-example,
-            ./gradle/dokka/dokka-library-publishing-example,
-            ./gradle/dokka/dokka-multimodule-example,
-            ./gradle/dokka/dokka-multiplatform-example
+            gradle/dokka/dokka-gradle-example,
+            gradle/dokka/dokka-kotlinAsJava-example,
+            gradle/dokka/dokka-library-publishing-example,
+            gradle/dokka/dokka-multimodule-example,
+            gradle/dokka/dokka-multiplatform-example
         ]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        with:
-          working-directory: ${{ matrix.projects }}
       - uses: actions/setup-java@v1
         with:
           java-version: 11
-          working-directory: ${{ matrix.projects }}
-      - run: ./gradlew clean build --no-daemon --stacktrace
-  runDokkaHtml:
+      - run: ./gradlew build --no-daemon --stacktrace
+        working-directory: ${{ matrix.projects }}
+
+  run-dokka-html:
     strategy:
       matrix:
         projects: [
-            ./gradle/dokka/dokka-gradle-example,
-            ./gradle/dokka-kotlinAsJava-example,
-            ./gradle/dokka/dokka-multiplatform-example
+            gradle/dokka/dokka-gradle-example,
+            gradle/dokka/dokka-kotlinAsJava-example,
+            gradle/dokka/dokka-library-publishing-example,
+            gradle/dokka/dokka-multiplatform-example
         ]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        with:
-          working-directory: ${{ matrix.projects }}
       - uses: actions/setup-java@v1
         with:
           java-version: 11
-          working-directory: ${{ matrix.projects }}
       - run: ./gradlew dokkaHtml --no-daemon --stacktrace
-  runDokkaMultiModule:
+        working-directory: ${{ matrix.projects }}
+
+  run-dokka-multimodule:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        with:
-          working-directory: ./gradle/dokka/dokka-multimodule-example
       - uses: actions/setup-java@v1
         with:
           java-version: 11
-          working-directory: ./gradle/dokka/dokka-multimodule-example
       - run: ./gradlew dokkaHtmlMultiModule --no-daemon --stacktrace
+        working-directory: gradle/dokka/dokka-multimodule-example
+
+  run-dokka-publishing:
+    strategy:
+      matrix:
+        tasks: [dokkaJavadocJar, dokkaHtmlJar]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - run: ./gradlew ${{ matrix.tasks }} --no-daemon --stacktrace
+        working-directory: gradle/dokka/dokka-library-publishing-example
