--- a/.github/workflows/dokka-examples.yml
+++ b/.github/workflows/dokka-examples.yml
@@ -65,14 +65,14 @@ jobs:
       - run: ./gradlew ${{ matrix.tasks }} --no-daemon --stacktrace
         working-directory: gradle/dokka/dokka-library-publishing-example
 
-  run-dokka-custom-task:
+  run-dokka-custom-format:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
           java-version: 11
-      - run: ./gradlew dokkaCustomTask --no-daemon --stacktrace
+      - run: ./gradlew dokkaCustomFormat --no-daemon --stacktrace
         working-directory: gradle/dokka/dokka-customFormat-example
 
   run-dokka-maven-example:
